--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+colorama==0.4.6
 Django==5.2
 djangorestframework==3.16.0
+idna==3.10
+pillow==11.1.0
 psycopg2-binary==2.9.10
 python-decouple==3.8
 python-dotenv==1.1.0
+qrcode==8.1
+razorpay==1.4.2
+requests==2.32.3
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.3.0
