--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,9 @@ charset-normalizer==3.4.1
 colorama==0.4.6
 Django==5.2
 djangorestframework==3.16.0
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 pillow==11.1.0
 psycopg2-binary==2.9.10
 python-decouple==3.8
