--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 colorama==0.4.6
 Django==5.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 gunicorn==23.0.0
 idna==3.10
