--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
