--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.5",
+    "@arcjet/next": "^1.0.0-beta.5",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/postcss": "^4.0.9",
     "framer-motion": "^12.4.7",
